Changed header to only say Fortune

--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
       }
       
       body {
-        background-image: url('bg/5.png'); /* Old random bg code. don't mind me! */
+        background-image: url('bg/5.png');
       }
     </style>
     <script type="text/javascript">
@@ -68,7 +68,7 @@
     </head>
     <body>
 <div class="hero-unit">
-    <h3>Fortune Cookie!</h3>
+    <h3>Fortune!</h3>
         <div id="contention">
             <div class="index">&nbsp;</div>
             <div class="content">&nbsp;</div>
