--- a/main.htm
+++ b/main.htm
@@ -1,22 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
     <script type="text/javascript">
-            $(document).ready(function() {
-                $("#contention").fortune({file: "./contentions.json", cookieNode: "contentions", metaNodes: {theIndex: "index", theContent: "content"}, animate: true});
 
-                $('#another').click(function() {
-                    $("#contention").fortune({file: "./contentions.json", cookieNode: "contentions", metaNodes: {theIndex: "index", theContent: "content"}, animate: true});
-                    return false;
-                });
-            });
         </script>
 
 <div data-bb-type="screen" data-bb-effect="fade">
     <div id="foo" data-bb-type="title" data-bb-caption="Fortune!"></div>
-    <div data-bb-type="round-panel"> 
-        <div id="contention">
+    <div id="contention" data-bb-type="round-panel"> 
             <div class="index">&nbsp;</div>
             <div class="content">&nbsp;</div>
-        </div>
     <div>
         <div id="another" data-bb-type="button" data-bb-style="stretch" onclick="document.getElementById('foo').setActionCaption('foo');">Another!</div>
     </div>
