Looks like it was just an issue of me using an old SDK.

--- a/index.htm
+++ b/index.htm
@@ -93,6 +93,7 @@
     {
         $("#contention").fortune({file: "./contentions.json", cookieNode: "contentions", metaNodes: {theIndex: "index", theContent: "content"}, animate: true});
     }
+    draw();
 	</script>
 	</head>
 	<body>
