--- a/main.htm
+++ b/main.htm
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
+<script>
+    document.addEventListener("webworksready", draw);
+</script>
 <div data-bb-type="screen" data-bb-effect="fade">
     <div id="foo" data-bb-type="title" data-bb-caption="Fortune!"></div>
     <div id="contention" data-bb-type="round-panel">
