--- a/main.htm
+++ b/main.htm
@@ -14,6 +14,6 @@
     </div>
     <!-- Footer! -->
     <div data-bb-type="round-panel">
-        <small>Powered by <a href="http://mbadran.github.com/jquery.fortune/" target="_blank">jquery.fortune</a></small>
+        <small>Powered by <a href="https://github.com/mbadran/jquery.fortune" target="_blank">jquery.fortune</a></small>
     </div>
 </div>
